--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body>
   <script type="text/javascript">
   <!--
-	window.location.href = "https://www.baidu.com";
+	window.location.href = "http://sports.qq.com/nba";
   //-->
   </script>
  </body>
